Resolve action visibility conflicts

--- a/src/atoms/actions.css
+++ b/src/atoms/actions.css
@@ -64,42 +64,48 @@
   fill: var(--actions-color-fill);
 }
 
-.action:hover > svg path {
-  fill: var(--actions-color-fill-hover);
-}
-
 .action.user-disable > svg {
   height: calc(var(--actions-action-icon-size) + 2px);
+}
+
+.action:hover:not(:disabled) > svg path {
+  fill: var(--actions-color-fill-hover);
 }
 
 .actions {
   cursor: default;
   float: right;
+  height: 24px;
   line-height: 18px;
+  position: relative;
   text-align: center;
   transition: all ease-out var(--actions-transition-delay);
+  width: 24px;
 }
 
 .actions:hover {
   opacity: 1;
 }
 
+/* stylelint-disable-next-line no-descending-specificity */
 .actions:hover > svg path {
   fill: var(--actions-color-fill-hover);
 }
 
 .actions-inner {
-  display: flex;
+  display: none;
   flex-direction: column;
-  margin-left: -13px;
+  margin-left: -8px;
   opacity: 0;
   position: absolute;
   transition: all ease-out var(--actions-transition-delay);
-  z-index: 100;
+  z-index: -1;
 }
 
 .actions:hover .actions-inner {
+  display: flex;
   opacity: 1;
+  z-index: 100;
 }
 
 .actions-group {
@@ -120,7 +126,7 @@
 }
 
 .reaction:hover > svg,
-.action:hover > svg {
+.action:hover:not(:disabled) > svg {
   transform: scale(1.2);
 }
 
