--- a/src/organisms/messages.css
+++ b/src/organisms/messages.css
@@ -1,14 +1,17 @@
+:root {
+  --messages-width: var(--chat-messages-list-width, 100%);
+  --messages-height: var(--chat-messages-list-height, 100%);
+}
+
 :host {
-  display: block;
   height: var(--chat-messages-height, inherit);
 }
 
 .messages {
   box-sizing: border-box;
   font-size: var(--messages-font-size, inherit);
-  height: 87%;
-  overflow-y: auto !important;
-  padding-left: 20px;
-  padding-top: 20px;
-  width: 93%;
+  height: var(--messages-height);
+  overflow-y: auto;
+  padding: 20px;
+  width: var(--messages-width);
 }
